[gd_scene load_steps=4 format=3 uid="uid://8ld6k3brsdij"]

[ext_resource type="Script" uid="uid://bde1cpsa3rdx2" path="res://levels/background_ui/round_ui.gd" id="1_7w2ym"]
[ext_resource type="FontFile" uid="uid://dag7s301mbfag" path="res://assets/fonts/ChiqPro.ttf" id="3_a7ew3"]

[sub_resource type="LabelSettings" id="LabelSettings_laht4"]
font = ExtResource("3_a7ew3")
font_size = 40

[node name="RoundUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_7w2ym")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Winner" type="Label" parent="CenterContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "AI Tokino WINS!"
label_settings = SubResource("LabelSettings_laht4")
horizontal_alignment = 1

[node name="spacer" type="Control" parent="CenterContainer/VBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="ReturnButton" type="Button" parent="CenterContainer/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_a7ew3")
theme_override_font_sizes/font_size = 25
text = "Return to Menu"

[connection signal="pressed" from="CenterContainer/VBox/ReturnButton" to="." method="_on_return_button_pressed"]
